# Research-Paper-Generation

./: .env.example  README.md  app.py  pyproject.toml  research_agent_sessions.db  router.py  whole_document.md
generated_papers/: research_paper_large_language_models_in_scientific_research_20250919_012244.md  research_paper_transformer_architectures_in_natural_language_processing_20250919_011223.md
research_vectordb/research_knowledge.lance/_transactions/: 0-39167881-546d-4176-9f24-9dfb663ebab2.txn
research_vectordb/research_knowledge.lance/_versions/: 1.manifest
